--- a/src/main/resources/static/sys/list.html
+++ b/src/main/resources/static/sys/list.html
@@ -49,7 +49,7 @@
 </div>
 <script type="text/javascript">
     $(function(){
-        var pageUrl="doPageUI.do";
+        var pageUrl="doPageUI";
         //异步加载pageUrl页面
         $("#pageId").load(pageUrl,function(){
             //异步加载日志信息(数据)
@@ -153,7 +153,7 @@
     function doGetObjects(){
         $("#checkAll").prop("checked",false);
         //1.url
-        var url="log/doFindPageObjects.do";
+        var url="log/doFindPageObjects";
         //2.params
         var pageCurrent=$("#pageId").data("pageCurrent");
         if(!pageCurrent)pageCurrent=1;
